# pyllow

./: .gitignore  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: release.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: baseline.rs  circular.rs  deps.rs  dupes.rs  flags.rs  health.rs  lib.rs  ownership.rs  score.rs  smells.rs  snapshot.rs  suppressions.rs  walker.rs
crates/analyzer/src/health/: ast.rs  churn.rs  metrics.rs  mod.rs  options.rs
crates/analyzer/src/smells/: mod.rs  walker.rs
crates/analyzer/src/smells/rules/: broad_except.rs  mod.rs  money_as_float.rs  mutable_default.rs  passthrough.rs  raise_from_none.rs  sentinel_equality.rs  single_method_class.rs  stray_print.rs  todo_density.rs  truthy_length.rs  unreachable.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  postprocess.rs
crates/cli/src/cmd/: audit.rs  check.rs  ci_template.rs  config.rs  dupes.rs  fix.rs  flags.rs  health.rs  init.rs  list.rs  llm.rs  llm_guide.md  migrate.rs  mod.rs  smells.rs  watch.rs
crates/cli/src/cmd/templates/: github_actions.yml  gitlab_ci.yml
crates/cli/src/report/: human.rs  json.rs  markdown.rs  mod.rs  sarif.rs
crates/cli/tests/: fastapi_minimal.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/extract/: Cargo.toml
crates/extract/src/: lib.rs  walker.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/plugin-aiohttp/: Cargo.toml
crates/plugin-aiohttp/src/: lib.rs
crates/plugin-alembic/: Cargo.toml
crates/plugin-alembic/src/: lib.rs
crates/plugin-beanie/: Cargo.toml
crates/plugin-beanie/src/: lib.rs
crates/plugin-celery/: Cargo.toml
crates/plugin-celery/src/: lib.rs
crates/plugin-click/: Cargo.toml
crates/plugin-click/src/: lib.rs
crates/plugin-django/: Cargo.toml
crates/plugin-django/src/: lib.rs
crates/plugin-fastapi/: Cargo.toml
crates/plugin-fastapi/src/: lib.rs
crates/plugin-fastmcp/: Cargo.toml
crates/plugin-fastmcp/src/: lib.rs
crates/plugin-flask/: Cargo.toml
crates/plugin-flask/src/: lib.rs
crates/plugin-marshmallow/: Cargo.toml
crates/plugin-marshmallow/src/: lib.rs
crates/plugin-prefect/: Cargo.toml
crates/plugin-prefect/src/: lib.rs
crates/plugin-pydantic/: Cargo.toml
crates/plugin-pydantic/src/: lib.rs
crates/plugin-pytest/: Cargo.toml
crates/plugin-pytest/src/: lib.rs
crates/plugin-script/: Cargo.toml
crates/plugin-script/src/: lib.rs
crates/plugin-sqlalchemy/: Cargo.toml
crates/plugin-sqlalchemy/src/: lib.rs
crates/plugin-sqlmodel/: Cargo.toml
crates/plugin-sqlmodel/src/: lib.rs
crates/plugin-starlette/: Cargo.toml
crates/plugin-starlette/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
tests/fixtures/fastapi-minimal/: pyllow.toml
tests/fixtures/fastapi-minimal/myapp/: main.py  orphan.py  services.py
tests/fixtures/fastapi-minimal/myapp/routers/: users.py
