[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.6"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/carlosarraes/pyllow"
homepage = "https://github.com/carlosarraes/pyllow"
keywords = ["python", "lint", "static-analysis", "code-quality", "dead-code"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
pyllow-types = { version = "0.0.6", path = "crates/types" }
pyllow-config = { version = "0.0.6", path = "crates/config" }
pyllow-extract = { version = "0.0.6", path = "crates/extract" }
pyllow-graph = { version = "0.0.6", path = "crates/graph" }
pyllow-analyzer = { version = "0.0.6", path = "crates/analyzer" }
pyllow-plugin-fastapi = { version = "0.0.6", path = "crates/plugin-fastapi" }
pyllow-plugin-fastmcp = { version = "0.0.6", path = "crates/plugin-fastmcp" }
pyllow-plugin-pytest = { version = "0.0.6", path = "crates/plugin-pytest" }
pyllow-plugin-prefect = { version = "0.0.6", path = "crates/plugin-prefect" }
pyllow-plugin-script = { version = "0.0.6", path = "crates/plugin-script" }
pyllow-plugin-click = { version = "0.0.6", path = "crates/plugin-click" }
pyllow-plugin-pydantic = { version = "0.0.6", path = "crates/plugin-pydantic" }
pyllow-plugin-sqlalchemy = { version = "0.0.6", path = "crates/plugin-sqlalchemy" }
pyllow-plugin-django = { version = "0.0.6", path = "crates/plugin-django" }
pyllow-plugin-celery = { version = "0.0.6", path = "crates/plugin-celery" }
pyllow-plugin-beanie = { version = "0.0.6", path = "crates/plugin-beanie" }
pyllow-plugin-alembic = { version = "0.0.6", path = "crates/plugin-alembic" }
pyllow-plugin-sqlmodel = { version = "0.0.6", path = "crates/plugin-sqlmodel" }

# Parsing
rustpython-parser = "0.4"
rustpython-ast = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Parallelism
rayon = "1"

# Filesystem
ignore = "0.4"
globset = { version = "0.4", features = ["serde1"] }
walkdir = "2"
notify = "6"

# Hashing
rustc-hash = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Regex
regex = "1"

# Output
colored = "2"
tabled = "0.15"

# Errors
thiserror = "1"
anyhow = "1"

# Test utilities
tempfile = "3"
