[package]
name = "pyllow-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline orchestration for pyllow"

[dependencies]
pyllow-types = { workspace = true }
pyllow-config = { workspace = true }
pyllow-extract = { workspace = true }
pyllow-graph = { workspace = true }
pyllow-plugin-fastapi = { workspace = true }
pyllow-plugin-fastmcp = { workspace = true }
pyllow-plugin-pytest = { workspace = true }
pyllow-plugin-prefect = { workspace = true }
pyllow-plugin-script = { workspace = true }
pyllow-plugin-click = { workspace = true }
pyllow-plugin-pydantic = { workspace = true }
pyllow-plugin-sqlalchemy = { workspace = true }
pyllow-plugin-django = { workspace = true }
pyllow-plugin-celery = { workspace = true }
pyllow-plugin-beanie = { workspace = true }
pyllow-plugin-alembic = { workspace = true }
ignore = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
globset = { workspace = true }
xxhash-rust = { workspace = true }
rustpython-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[dependencies.toml]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true
