[package]
name = "pyllow-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Configuration loading for pyllow"

[dependencies]
pyllow-types = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
globset = { workspace = true }
thiserror = { workspace = true }
