[package]
name = "pyllow-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Python AST extraction (imports/exports) for pyllow"

[dependencies]
pyllow-types = { workspace = true }
rustpython-parser = { workspace = true }
rustpython-ast = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
