[package]
name = "pyllow-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Module graph + import resolution for pyllow"

[dependencies]
pyllow-types = { workspace = true }
pyllow-extract = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
