[package]
name = "pyllow-plugin-django"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Django plugin for pyllow"

[dependencies]
pyllow-types = { workspace = true }
pyllow-extract = { workspace = true }
rustpython-ast = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
