[package]
name = "pyllow-plugin-pytest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "pytest plugin for pyllow"

[dependencies]
pyllow-types = { workspace = true }
pyllow-extract = { workspace = true }
rustc-hash = { workspace = true }
