[package]
name = "pyllow-plugin-starlette"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Starlette plugin for pyllow"

[dependencies]
pyllow-types = { workspace = true }
pyllow-extract = { workspace = true }
rustpython-ast = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
